2011-06-23 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-56
	* Bug fix: Fixes selection path errors. (bug 76145).
	* Fixes Import errors: Forces update the tree model to avoid 
	  ArrayIndexOutOfBoundsException.
	* Added a new progress bar dialog which is also customisable and
	  reusable for long processes.
	* Improvements to ImportAll functionality. (avoiding model updates). 
	  
2011-06-10 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-55
	* Present only imported items differences after importing them. (bug/feature 83085).		
	* Change to "update all existing modules" instead of "import all modules". (bug/feature 83086).
	
2011-06-08  Andrea Bocci <andrea.bocci@crn.ch>
	* tag V01-05-54
	* MessageLogger editor: add support for discarding LogError-level messages on a per-module basis

2011-06-03  Andrea Bocci <andrea.bocci@crn.ch>
	* tag V01-05-53
	* Bug fix: Configuration -> Parse properly takes into account "not" and "ingnore" operators

2011-06-03  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-52
	* Bug fix: propagate module re-labelling to event content statements

2011-06-01 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* Not tagged as version.
	* Disable "datasets" tab for sequences.

2011-06-01 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-51
	* Disable "mouse over" text for Sequences and 
	* display "unresolved input tags" in right lower panel tabs. (bug/feature 82524).

2011-05-28 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-50
	* add missed files
	* tag V01-05-49
	* add regexp matching as 3rd option in search mode

2011-05-27 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-48
	* protect for null-pointer exception in ParameterTreeModel.java

2011-05-26 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-47
	* Display datasets and unassigned input tags of selected path